// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveSubtraction /> should render when [show=false] 1`] = `
<RemoveModal
  id="foo"
  name="Foo"
  noun="Subtraction"
  onConfirm={[Function]}
  onHide={[MockFunction]}
  show={false}
/>
`;

exports[`<RemoveSubtraction /> should render when [show=true] 1`] = `
<RemoveModal
  id="foo"
  name="Foo"
  noun="Subtraction"
  onConfirm={[Function]}
  onHide={[MockFunction]}
  show={true}
/>
`;
